<resources>
    <string name="app_name">Just Java</string>

    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whippedcream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="ordersummary">Order Summary</string>
    <string name="order">Order</string>
</resources>