<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/nametextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"></EditText>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"></TextView>

        <CheckBox
            android:id="@+id/whipped_Cream_Checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingLeft="24dp"
            android:text="@string/whippedcream"
            android:textSize="16sp"></CheckBox>

        <CheckBox
            android:id="@+id/chocolate_Checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp"></CheckBox>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-"></Button>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="16sp"></TextView>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+"></Button>
        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/ordersummary"></TextView>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0"
            android:textColor="@color/black"
            android:textSize="16sp"></TextView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="#ffffff"></Button>

    </LinearLayout>
</ScrollView>